# muehle

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml  index.html  resources.tar  start.bat
.cargo/: config.txt
src/: action.rs  game_state.rs  game_utils.rs  lib.rs  main.rs  mill.rs  mill_detection.rs  move.rs  position.rs  prints.rs  rendering.rs
src/agent/: action.rs  enumerate.rs  generate_actions.rs  main.rs  mill_detection.rs  minimax.rs  mod.rs  move.rs  position.rs  utils.rs
src/agent/test_list_moves/: input_felder.txt  mod.rs  output_formatted_normalized
src/game/: game_utils.rs  main.rs
src/logic/: action.rs  forward_boards.rs  game_state.rs  mill_detection.rs  mod.rs  move.rs  move_token_count.rs  position.rs
src/ui/: game.rs  input.rs  mod.rs  setup.rs  ui.rs
src/ui-game/: input.rs  main.rs  ui.rs
