[package]
name = "muehle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
rayon = "1.10.0"
fnv = "1.0.7"
good-web-game = "0.6.1"

[[bin]]
name = "muehle"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = "full"
