[package]
name = "muehle"
version = "1.0.0"
edition = "2021"
description = "Enjoy the classic board game Nine Men's Morris againt an other human player or an AI opponent."
license = "MIT"
repository = "https://github.com/LouisRadek/muehle"
documentation = "https://github.com/LouisRadek/muehle?tab=readme-ov-file#implementation"
authors = ["Louis Radek <radek.louisbuiss@gmail.com>"]

[dependencies]
itertools = "0.13.0"
rayon = "1.10.0"
fnv = "1.0.7"
good-web-game = "0.6.1"

[[bin]]
name = "muehle"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = "full"
